--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ chardet==5.1.0
 charset-normalizer==3.1.0
 dacite==1.8.0
 Django==4.2
+django-crispy-forms==2.0
 frozenlist==1.3.3
 geojson-pydantic==0.5.0
-google-api-core==2.11.0
 google-auth==2.17.2
 google-auth-httplib2==0.1.0
 googleapis-common-protos==1.59.0
+googlemaps==4.10.0
+gunicorn==20.1.0
 httplib2==0.22.0
 idna==3.4
 multidict==6.0.4
@@ -31,6 +33,7 @@ requests==2.28.2
 rsa==4.9
 six==1.16.0
 sqlparse==0.4.3
+traveltimepy==3.2.1
 typing_extensions==4.5.0
 uritemplate==4.1.1
 urllib3==1.26.15
